# aether

./: .env.template  .gitignore  .pre-commit-config.yaml  LOG.md  Makefile  README.md  VERIFICATION_SUMMARY.md  analysis_report.md  backend-only.yml  docker-compose-new.yml  docker-compose.yml  final_analysis_report.md  full-compose.yml  simple-compose.yml  start.sh
aether/backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
aether/backend/app/: celery_app.py  config.py  database.py  main.py
aether/backend/app/ai/: __init__.py  __main__.py  embedding_service.py  inference_pool.py  manager.py  model_registry.py  router.py  smart_router.py
aether/backend/app/api/: router.py
aether/backend/app/channels/: email_channel.py  router.py  telegram_channel.py  widget_channel.py
aether/backend/app/core/: deps.py  rate_limit.py  security.py  tenant_migration.py
aether/backend/app/middleware/: tenant.py
aether/backend/app/models/: __init__.py  ai.py  audit.py  auth.py  base.py  conversations.py  documents.py  enums.py  organisations.py  process_runtime.py
aether/backend/app/plugins/: loader.py
aether/backend/app/schemas/: ai.py  billing.py  channels.py
aether/backend/app/seeds/: plans.py
aether/backend/app/services/: ai_pipeline.py  billing_service.py  tenant_provisioning.py  ws_manager.py
aether/backend/app/tasks/: __init__.py
aether/backend/migrations/: env.py
aether/backend/migrations/versions/: 1fcde569fa17_initial_all_tables.py  (+3 more)
aether/backend/tests/: conftest.py  test_security.py  test_tenant_provisioning.py
docs/: AUDIT.md  (+2 more)
(+596 files in other folders)
